[project]
name = "x-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "discord>=2.3.2",
    "dotenv>=0.9.9",
    "numpy>=2.3.2",
    "requests>=2.32.5",
    "supabase>=2.18.1",
    "python-telegram-bot>=20.0",
    "openai>=1.102.0",
    "langchain>=0.3.27",
    "langchain-google-genai>=2.1.10",
    "matplotlib>=3.10.6",
]
